# RustLuaMud

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  MIGRATION.md  MIGRATION_STATUS.md  PHASE1_TEST.md  PHASE2_TEST.md  PHASE3_TEST.md  README.md  RELEASE_NOTES_v0.20.md  RELEASE_NOTES_v0.21.md  ROADMAP.md  codecov.yml  fix_triggers.py  lua-script-memory-audit.md  tarpaulin-report.html  test_find_functions.lua  test_run_optimization.lua  xkxMAP.db
.gitee/workflows/: nightly.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  nightly.yml  release.yml
.trae/rules/: code-quality-workflow.md  debug-output.md  git-workflow.md  mushclient-api.md  regex-pattern.md  script-encoding-warning.md  script-encoding.md
configs/: default.toml
docs/: code-quality-assessment.md  design.md  j1800-performance-optimization-plans.md  phase1-test.md  war_refactor_analysis.md
help/: README.md
help/api/: README.md  aliases.md  command-execution.md  config.md  constants.md  database.md  internal.md  json.md  logging.md  mushclient-AddAlias.md  mushclient-AddTimer.md  mushclient-AddTrigger.md  mushclient-AddTriggerEx.md  mushclient-Connect.md  mushclient-DeleteFunctions.md  mushclient-DiscardQueue.md  mushclient-DoAfter.md  mushclient-EnableAlias.md  mushclient-EnableTrigger.md  mushclient-GetAliasInfo.md  mushclient-GetInfo.md  mushclient-GetPluginInfo.md  mushclient-GetStyle.md  mushclient-GetTimerInfo.md  mushclient-GetTriggerInfo.md  mushclient-GroupFunctions.md  mushclient-ListFunctions.md  (+22 more)
profiles/: btidrmda.toml  btidrmdb.toml  btidrmdc.toml  btidrmdd.toml  btidrmde.toml  example.toml  lpswarm.toml  lpswarn.toml  lpswaro.toml  lpswarp.toml  poluab.toml  wudaodm.toml.bak
profiles2/: icriqq.toml  monkpkbb.toml  xiaoyaox.toml  zorro.toml
scripts/: bootstrap.sh  class  class-utf8  example.lua  michen_xkx.lua
src/: app.rs  config.rs  lib.rs  main.rs
(+59 files in other folders)
