[package]
name = "rust-lua-mud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
encoding_rs = "0.8"
unicode-width = "0.2"
mlua = { version = "0.11", features = ["luajit", "vendored", "serialize"] }
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"
