[package]
name = "rust-lua-mud"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "RustLuaMud"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
encoding_rs = "0.8"
libc = "0.2"
unicode-width = "0.2"
mlua = { version = "0.12", features = ["luajit", "vendored", "serialize"] }
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"
tokio-socks = "0.5"

[profile.test]
# opt-level=1 保留调试符号，测试二进制更小、链接更快
# 不影响断点调试和 RUST_BACKTRACE 定位
opt-level = 1
